0.30
Added 0.6 support.
Enhanced the pgsql tasks and schema to support "action" columns and introduced a stored procedure called during every changeset application.

0.29
Fixed the --write-pgsql-simple-dump task to properly escape '\' characters.
Updated the pgsql simple tasks to use an SRID of 4326.
Updated build script to include a tar file distribution preserving launch script execute permissions.
Enhanced the Entity class to allow dates to be represented as strings to avoid parsing overhead.  Updated xml tasks to utilise this feature.
Updated the pgsql simple tasks to use the new database schema which is more similar to the one used in the central MySQL
Removed the old postgresql tasks.
Removed "simple" from the names of the simple pgsql tasks.
Added plugin support allowing new tasks in external jar files to be registered with osmosis.
Added command line checks to ensure all task and option arguments are recognised, any misspelt arguments will now raise an error.
Removed all static methods from the task registrar and task manager factory classes to avoid global data and simplify testing. 
Added the --node-key and --node-key-value tasks.

0.28
Added a maximum file download count feature to the change downloader to limit processing overhead when synchronising long time intervals. 
Fixed a major error in the TaskRegistrar from 0.27 where multiple tasks had the same name preventing osmosis from launching.

0.27
Added change downloader tasks providing the basis for automatic synchronisation of data sets.

0.26
Removed the bdb dataset implementation.
Fixed an incorrect constant bug in the mysql tile calculator causing incorrect tile values to be generated.  

0.25
Added a new osmosis-extract-mysql application for extracting regular changesets from mysql.
Removed use of String.isEmpty to minimise Java5 incompatibility.
Modified the default pipe connectivity functionality to use stack-based connectivity instead of queue-based connectivity.